--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
 
 .root{
   --primary:#107D07;
-
 }
 
 body{
-  background-image: url(https://s3-alpha-sig.figma.com/img/3eb2/671a/2e9dc248e54f8b71b366dddf20fbe136?Expires=1728864000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=a67gxtMagbunVGk7F-WpFcE7bnrVB-VBQm9zz6rhl9rvJchAOI0Clk5cmVtCDDmIGK8FkSbQA52rG~VBpsJ~5MUA3JEmQGgHqZzJD~SWc9algPzEgyx4J3cF5ukmgBQ2xZhETI1hfVDUMlYFNgYI4TYARtt3iKNTjB84BUwQGprgbmq19fLsWcVzwqvWXRHkxIUwey6p~uNXNUgqmq1Lh17c7-sA8lOHocQPavd~bJeOUGf8HZtpZfFRhz47HmYwPZbACu-tUznmC9zla0SaYC1n4UrQc7WKPw9VyVM-hk03Gdg7~tLlWrnTO-VKJo0pTRfj~v5jBG5SPxgJtO29QQ__);
+  background-image: url("https://s3-alpha-sig.figma.com/img/3eb2/671a/2e9dc248e54f8b71b366dddf20fbe136?Expires=1728864000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=a67gxtMagbunVGk7F-WpFcE7bnrVB-VBQm9zz6rhl9rvJchAOI0Clk5cmVtCDDmIGK8FkSbQA52rG~VBpsJ~5MUA3JEmQGgHqZzJD~SWc9algPzEgyx4J3cF5ukmgBQ2xZhETI1hfVDUMlYFNgYI4TYARtt3iKNTjB84BUwQGprgbmq19fLsWcVzwqvWXRHkxIUwey6p~uNXNUgqmq1Lh17c7-sA8lOHocQPavd~bJeOUGf8HZtpZfFRhz47HmYwPZbACu-tUznmC9zla0SaYC1n4UrQc7WKPw9VyVM-hk03Gdg7~tLlWrnTO-VKJo0pTRfj~v5jBG5SPxgJtO29QQ__");
   width: 100vw;
   height:120vh;
   gap: 0px;
   opacity: 0px;
-  display:flex;
-  flex-direction: column;
+  position:relative;
 }
 
 .nav-bar{
+  position:absolute;
+  top:0;
   height:15vh;
   width:100vw;
   display:flex;
@@ -37,9 +37,11 @@ body{
 .nav-button{
   color:#107D07; 
   font-family: "Fredoka", system-ui;
+  font-optical-sizing: auto;
   font-weight: 541;
+  font-style: normal;
   font-variation-settings:"wdth" 103.8;
-  font-size: 27px;
+  font-size:27px;
   margin:20px;
   border:none;
   background-color: transparent;
@@ -52,6 +54,10 @@ body{
 }
 
 .home-sym{
+  position:absolute;
+  top:30%;
+  left:50%;
+  transform: translate(-50%,-30%);
   height:70vh;
   width:100vw;
   display:flex;
@@ -61,27 +67,30 @@ body{
 }
 
 .home-word {
+  flex:none;
   height: 23vh;
   width: 70vw;
-  padding: 30px;
+  padding: 20px;
   border: 2px solid grey;
   border-radius: 20px;
   background-color: transparent;
-  backdrop-filter: blur(8px);
+  backdrop-filter: blur(9px);
   position: relative;
 }
 
 .home-main-word{
   position: absolute;
+  top:10%;
+  left:8%;
   font-family: "Fredoka", system-ui;
-  font-weight: 600;
-  font-size: 85px; 
+  font-optical-sizing: auto;
+  font-weight: 541;
+  font-style: normal;
+  font-variation-settings:"wdth" 103.8;
+  font-size: 82px; 
 }
 
 .home-main-word:not(.invert){
-  position: absolute;
-  top:-20%;
-  left:5%;
   text-shadow: 
   -2px -2px 0 #fff,
   2px -2px 0 #fff,
@@ -95,8 +104,8 @@ body{
 }
 
 .invert {
-  top:45%;
-  left:5%;
+  top:41%;
+  height:fit-content;
   display: inline-block;
   transform: rotateX(180deg);
   background: linear-gradient(180deg, rgba(102, 102, 102, 0.26) 0.01%, rgba(53, 53, 53, 0.54) 48.5%, rgba(0, 0, 0, 0.7) 100%);
@@ -105,3 +114,99 @@ body{
   -webkit-text-fill-color: transparent; 
   color: transparent; 
 }
+
+.countdown{
+  position: absolute;
+  top: 67%;
+  left:50%;
+  transform:translate(-50%,-65%);
+  height:23vh;
+  width:40vw;
+  background-color:rgba(11, 74, 25, 1);
+  border-radius: 10px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.counttime{
+  color:#fff;
+  font-family: "Fredoka", system-ui;
+  font-optical-sizing: auto;
+  font-weight: 541;
+  font-style: normal;
+  font-variation-settings:"wdth" 103.8;
+  font-size:64px;
+  margin:0;
+}
+
+.seeu{
+  color:#fff;
+  font-family: "Fredoka", system-ui;
+  font-optical-sizing: auto;
+  font-weight: 541;
+  font-style: normal;
+  font-variation-settings:"wdth" 103.8;
+  font-size: 32px;
+  padding:0;
+  margin:0;
+}
+
+.labels{
+  color:#fff;
+  font-family: "Fredoka", system-ui;
+  font-optical-sizing: auto;
+  font-weight: 541;
+  font-style: normal;
+  font-variation-settings:"wdth" 103.8;
+  font-size: 24px;
+  padding:0;
+  margin:0;
+}
+
+@media screen and (max-width: 1400px) {
+  .nav-button {
+    font-size:25px;
+    margin: 10px;
+  }
+
+  .home-word {
+    height:18vh;
+    width: 65vw; 
+  }
+
+  .home-main-word {
+    font-size: 55px; 
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .nav-logo{
+    display:none;
+  }
+  .nav-button{
+    font-size:20px;
+    margin: 10px;
+  }
+  .nav-button:not(.apply){
+    position:absolute;
+    
+  }
+
+  .home-word {
+    height:18vh;
+    width: 100vw; 
+    background-color: transparent;
+    backdrop-filter: blur(0px);
+    border:none;
+  }
+
+  .home-main-word {
+    font-size: 55px; 
+  }
+}
+
+
+
