--- a/src/App.css
+++ b/src/App.css
@@ -6,23 +6,30 @@
 
 body{
   background-image: url("https://s3-alpha-sig.figma.com/img/3eb2/671a/2e9dc248e54f8b71b366dddf20fbe136?Expires=1728864000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=a67gxtMagbunVGk7F-WpFcE7bnrVB-VBQm9zz6rhl9rvJchAOI0Clk5cmVtCDDmIGK8FkSbQA52rG~VBpsJ~5MUA3JEmQGgHqZzJD~SWc9algPzEgyx4J3cF5ukmgBQ2xZhETI1hfVDUMlYFNgYI4TYARtt3iKNTjB84BUwQGprgbmq19fLsWcVzwqvWXRHkxIUwey6p~uNXNUgqmq1Lh17c7-sA8lOHocQPavd~bJeOUGf8HZtpZfFRhz47HmYwPZbACu-tUznmC9zla0SaYC1n4UrQc7WKPw9VyVM-hk03Gdg7~tLlWrnTO-VKJo0pTRfj~v5jBG5SPxgJtO29QQ__");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.body{
   width: 100vw;
-  height:120vh;
+  height:100vh;
   gap: 0px;
   opacity: 0px;
   position:relative;
 }
 
 .nav-bar{
-  position:absolute;
+  position:fixed;
   top:0;
   height:15vh;
   width:100vw;
   display:flex;
   flex-direction: row;
   justify-content: end;
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(12px);
   box-shadow: 0px 10px 8px #00000040;
+  z-index:10;
 }
 
 .nav-logo{
@@ -55,7 +62,7 @@ body{
 
 .home-sym{
   position:absolute;
-  top:30%;
+  top:35%;
   left:50%;
   transform: translate(-50%,-30%);
   height:70vh;
@@ -117,7 +124,7 @@ body{
 
 .countdown{
   position: absolute;
-  top: 67%;
+  top:80%;
   left:50%;
   transform:translate(-50%,-65%);
   height:23vh;
@@ -166,6 +173,46 @@ body{
   margin:0;
 }
 
+.sponsor-body{
+  height:100vh;
+  width:100vw;
+  background: linear-gradient(180deg, #78A653 0%, #1FB966 100%);
+  position:absolute;
+  top:120vh;
+  font-family: "Fredoka", system-ui;
+  font-optical-sizing: auto;
+  font-weight: 541;
+  font-style: normal;
+  font-variation-settings:"wdth" 103.8;
+  text-align: center;
+  overflow:hidden;
+  z-index:0;
+}
+
+.wording{
+  font-size: 20px;
+}
+
+.wording>img{
+  height:20px;
+  width:20px;
+}
+
+.info{
+  height:60vh;
+  width:55vw;
+  border:2px solid red;
+  border-radius: 50%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.info>p{
+  flex-wrap: wrap;
+ font-size: large; 
+}
 @media screen and (max-width: 1400px) {
   .nav-button {
     font-size:25px;
