--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ body{
   background-attachment: fixed;
 }
 
+/*----------------------------------------Home Page CSS stlying----------------------------------------------------*/
 .body{
   width: 100vw;
   height:100vh;
@@ -33,12 +34,10 @@ body{
 }
 
 .nav-logo{
-  height:60px;
-  width:100px;
-  background-color: #fff;
-  position:fixed;
-  left:30px;
-  top:30px;
+  width:125px;
+  height:125px;
+  left:20px;
+  position: fixed;
 }
 
 .nav-button{
@@ -54,13 +53,17 @@ body{
   background-color: transparent;
 }
 
-.nav-button:hover
-{
-  font-size: 29px;
+.nav-button:hover{
+  font-size: 27px;
   color:#000;
 }
 
-.home-sym{
+.nav-button.active {
+  color: black; 
+}
+
+
+.home{
   position:absolute;
   top:35%;
   left:50%;
@@ -172,8 +175,13 @@ body{
   padding:0;
   margin:0;
 }
+/*---------------------------------------------------------------------------------------------------------------------
 
-.sponsor-body{
+
+
+/*------------------------------Sponsors Page CSS styling-------------------------------------------------------------*/
+
+.sponsors{
   height:100vh;
   width:100vw;
   background: linear-gradient(180deg, #78A653 0%, #1FB966 100%);
@@ -181,7 +189,6 @@ body{
   top:120vh;
   font-family: "Fredoka", system-ui;
   font-optical-sizing: auto;
-  font-weight: 541;
   font-style: normal;
   font-variation-settings:"wdth" 103.8;
   text-align: center;
@@ -190,29 +197,100 @@ body{
 }
 
 .wording{
-  font-size: 20px;
+  position:absolute;
+  top:0px;
+  left:27%;
+  font-size: 40px;
+  color:rgba(16, 93, 15, 1);
+  z-index:100;
+  font-weight: 1000;
 }
 
-.wording>img{
-  height:20px;
-  width:20px;
+/* .wording::after{
+  position:absolute;
+  top:0px;
+  left:0px;
+  width:max-content;
+  z-index: 1;
+  content:'Special';
+  font-size: 39px;
+  font-weight: 350;
+  color: rgba(255, 255, 255, 1);
+
+} */
+
+ .hand_img{
+  width:65px;
+  height:54px;
+  position: inherit;
+  left:575px;
+} 
+
+.sponsors-name{
+  width: 10%;
+  height: 66px;
+  background: rgba(217, 217, 217, 1);
+  position: inherit;
+}
+
+.sp1{
+  top:20%;
+  left:15%;
+}
+
+.sp3{
+  top:20%;
+  left:65%;
+}
+
+.sp2{
+  top:43%;
+  left:2%;
+}
+
+.sp4{
+  top:43%;
+  left:83%;
 }
 
 .info{
-  height:60vh;
-  width:55vw;
+  position:absolute;
+  width: 80%;
+  height: 80%;
+  top:33%;
+  left:8%;
+  /* height:80vh;
+  width:65vw; */
   border:2px solid red;
   border-radius: 50%;
   display:flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  background: rgba(253, 255, 247, 0.28);
+  border: 2px solid rgba(255, 255, 255, 1);
 }
 
-.info>p{
-  flex-wrap: wrap;
- font-size: large; 
+.infowrap{
+  width:69%;
+  /* border:2px solid red; */
+  height:75%;
 }
+
+.info>.infowrap>p{
+  flex-wrap: wrap;
+  font-size: 38px;
+  color:rgba(9, 47, 13, 1);
+  font-weight:600;
+}
+
+/*-----------------------------------------------------------------------------------------------------------------*/
+
+
+
+/*-----------------------------------------------------Responsiveness----------------------------------------------*/
+
+
 @media screen and (max-width: 1400px) {
   .nav-button {
     font-size:25px;
