--- a/src/Speakers.css
+++ b/src/Speakers.css
@@ -5,15 +5,20 @@
     height:100vh;
     width:100vw;
     /* background: linear-gradient(180deg, #43755A 0%, #1FB966 100%); */
-    background:#5cb25d;
+    background: linear-gradient(180deg, #8ED179 0%, #5FC771 100%);
     background-size: cover; 
+}
+.cont1{
+  margin-top: 10px;
 }
 .chat-container {
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
-    margin: 50px;
+    margin-bottom: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
     animation:appear linear;
     animation-timeline: view();
     animation-range:entry 0% cover 40%;
@@ -24,7 +29,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    margin: 50px;
+    margin: 30px;
     animation:appear-right linear;
     animation-timeline: view();
     animation-range:entry 0% cover 40%;
@@ -105,14 +110,14 @@
   /* Chat bubble styling */
   .chat-bubble {
     background: linear-gradient(135deg, rgba(72, 187, 120, 0.9), rgba(72, 187, 120, 0.7));
-    height: 136px;
-  top: 203px;
-  left: 545px;
-  gap: 0px;
-  border-radius: 40px;
-  border: 7px 0px 0px 0px;
-  opacity: 0px;
-  border: 7px solid #FFFFFF;
+    height: 116px;
+    top: 203px;
+    left: 545px;
+    gap: 0px;
+    border-radius: 40px;
+    border: 7px 0px 0px 0px;
+    opacity: 0px;
+    border: 7px solid #FFFFFF;
     color: white;
     flex-grow: 1;
     display: flex;
