--- a/src/faq.css
+++ b/src/faq.css
@@ -4,7 +4,7 @@
     padding: 0;
     margin:0;
     height:115vh;
-    background:#5cb25d;
+    background: linear-gradient(180deg, #5FC771 0%, #3CC06B 100%);
     width:100vw;
     display:flex;
     flex-direction: column;
