--- a/src/sponsors.css
+++ b/src/sponsors.css
@@ -4,8 +4,8 @@
     top:200vh;
     height:100vh;
     width:100vw;
-    /* background: linear-gradient(180deg, #78A653 0%, #1FB966 100%);  */
-    background:#5cb25d;
+    background: linear-gradient(180deg, #BFDC81 0%, #8ED179 100%);
+    /* background:#5cb25d; */
     /* background: transparent;
     backdrop-filter: blur(5px); */
     font-family: "Fredoka", system-ui;
@@ -18,6 +18,7 @@
   
   .word{
     position:absolute;
+    top: 12%;
     left:27vw;
     font-size: 3vw;
     color:rgba(16, 93, 15, 1);
@@ -52,31 +53,31 @@
   }
   
   .sp1{
-    top:20%;
+    top:30%;
     left:15%;
   }
   
   .sp3{
-    top:20%;
-    left:65%;
+    top:30%;
+    right: 15%;
   }
   
   .sp2{
-    top:43%;
-    left:2%;
+    top:63%;
+    left:5%;
   }
   
   .sp4{
-    top:43%;
-    left:83%;
+    top:63%;
+    right:5%;
   }
   
   .info{
     position:absolute;
-    width: 80%;
-    height: 80%;
-    top:33%;
-    left:8%;
+    width: 50%;
+    height: 50%;
+    top:40%;
+    left:25%;
     border-radius: 50%;
     display:flex;
     justify-content: center;
@@ -84,17 +85,17 @@
     flex-wrap: wrap;
     background: rgba(253, 255, 247, 0.28);
     border: 2px solid rgba(255, 255, 255, 1);
-    box-shadow: 0px 0px 12px 12px green;
+    /* box-shadow: 0px 0px 12px 12px green; */
   }
   
   .infowrap{
-    width:69%;
-    height:75%;
+    width:49%;
+    height:55%;
   }
   
   .info>.infowrap>p{
     flex-wrap: wrap;
-    font-size: 2.75vw;
+    font-size: 25px;
     color:rgba(9, 47, 13, 1);
     font-weight:600;
   }
