--- a/src/About.css
+++ b/src/About.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
+body{
+    background-image: url('./susbgfinal.jpg');
+}
 .container{
     width: 80%; /* Adjust as needed */
     max-height: 659px;
