--- a/src/Tracks.css
+++ b/src/Tracks.css
@@ -5,13 +5,22 @@
       box-sizing: border-box;
     }
 
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: #4caf50;
-    }
+.tracks1{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #4caf50;
+  background-size: 150vh 150vh;
+  z-index: 1; 
+  padding: 20px; 
+  margin: 0;
+  position:absolute;
+  top:200vh;
+  height:110vh;
+  width:100vw;
+  
+
+}
 
     .circle-container {
       overflow: hidden;
